<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">
    <LinearLayout 
	    android:id="@+id/personal_linearlayout0"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
        android:background="@color/title_color"
	    android:orientation="horizontal">	
		<Button
            android:id="@+id/back_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.11"
            android:background="@drawable/friends_list"
            android:gravity="center"
            android:text="@string/back_main"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:paddingRight="60dp"
            android:layout_weight="0.50"
            android:gravity="right"
            android:text="@string/friends_list_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/add_friends"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.11"
            android:background="@drawable/friends_list"
            android:gravity="center"
            android:text="@string/add_friends"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/search_line"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:visibility="gone" >	
	    
	    <EditText
	        android:id="@+id/search_world"
	        android:layout_width="0dp"
	        android:layout_height="39dp"
	        android:layout_margin="10dp"
	        android:layout_weight="1.0"
	        android:background="@drawable/button_normal_shape"
	        android:hint="@string/username"
	        android:paddingLeft="5dp"
	        android:singleLine="true"
	        android:textColorHint="#b3b3b3"
	        android:textSize="18sp" />
		<Button
	        android:id="@+id/btn_search"
	        android:layout_width="60dp"
	        android:layout_height="39dp"
	        android:layout_margin="10dp"
	        android:layout_marginRight="11dp"
	        android:textColor="@color/white"
	        android:background="@drawable/friends_list"
	        android:text="@string/search"
	        android:textSize="14sp" />
	    
	</LinearLayout>
    
    <LinearLayout 
	    android:id="@+id/personal_linearlayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:clickable="true"
	    android:background="@drawable/item_pressed_change_color"
	    android:orientation="horizontal">
	    <TextView 
	        android:id="@+id/new_friends_p"
	        style="@style/MessageItem"
	        android:text="@string/new_friends"
	        android:background="@drawable/green"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="left"
	        android:textColor="@color/black"
	        android:layout_marginLeft="18dp"
	        android:text="新的朋友"/>
	    <TextView 
	        android:id="@+id/goto_already_come_out"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"
	        android:layout_weight="1"
	        android:layout_marginRight="8dp"
	        android:text="@string/forward"
	        android:textColor="#400000"
	        android:textSize="20dp"/>
	</LinearLayout>
	<ListView
        android:id="@+id/list_newfriend"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:cacheColorHint="#00000000"
        android:descendantFocusability="afterDescendants"
        android:divider="@drawable/base_horizontal_line"
        android:dividerHeight="1dp"
        android:fastScrollEnabled="false" />
    
</LinearLayout>