<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/test_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

     <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:background="@color/white"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:baselineAligned="false"
        android:background="#000000"
        android:paddingTop="5dp"
        android:paddingBottom="3dp"
        android:layout_height="50dp" >
		<LinearLayout 
		    android:id="@+id/linearLayout1"
		    style="@style/MainBarAll" >
		    <TextView
	            android:id="@+id/tab_1p"
	            android:text="@string/tab_1"
	            style="@style/MainBarImage" />
		    <TextView
	            android:id="@+id/tab_1"
	            style="@style/MainBarLetter" />
		 </LinearLayout>
        
        <LinearLayout 
			android:id="@+id/linearLayout2"
            style="@style/MainBarAll" >
		    <TextView
	            android:id="@+id/tab_2p"
	            android:text="@string/tab_2"
	            style="@style/MainBarImage" />
		    <TextView
	            android:id="@+id/tab_2"
	            style="@style/MainBarLetter" />
		 </LinearLayout>
		 <LinearLayout 
		    android:id="@+id/linearLayout3"
		    style="@style/MainBarAll" >
		    <TextView
	            android:id="@+id/tab_3p"
	            android:text="@string/tab_3"
	            style="@style/MainBarImage" />
		    <TextView
	            android:id="@+id/tab_3"
	            style="@style/MainBarLetter" />
		 </LinearLayout>
		 <LinearLayout 
		     android:id="@+id/linearLayout4"
		     style="@style/MainBarAll" >
		    <TextView
	            android:id="@+id/tab_4p"
	            android:text="@string/tab_4"
	            style="@style/MainBarImage" />
		    <TextView
	            android:id="@+id/tab_4"
	            style="@style/MainBarLetter" />
		 </LinearLayout>
    </LinearLayout>

</LinearLayout>